force-app/main/default/objects/Salesforce_Support__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Salesforce Support</relationshipLabel>
    <relationshipName>Salesforce_Support</relationshipName>
    <type>Lookup</type>
</CustomField>