force-app/main/default/objects/Salesforce_Support__c/fields/Internal_Team_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Internal_Team_Remarks__c</fullName>
    <label>Internal Team Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>