force-app/main/default/objects/Salesforce_Support__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>Lead Management System</fullName>
            </value>
            <value>
                <fullName>Order Management System</fullName>
            </value>
            <value>
                <fullName>Job Card Process</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Credential Related Issues</fullName>
            </value>
            <value>
                <fullName>Warranty Management Issue</fullName>
            </value>
            <value>
                <fullName>Vehicle Related Issue</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Report Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>