force-app/main/default/objects/Salesforce_Support__c/fields/Supporting_Topics__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Topics__c</fullName>
    <label>Supporting Topics</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead Creation</fullName>
            </value>
            <value>
                <fullName>Test Ride Related</fullName>
            </value>
            <value>
                <fullName>Follow-up Related</fullName>
            </value>
            <value>
                <fullName>Lead Visibility</fullName>
            </value>
            <value>
                <fullName>Lead Transfer</fullName>
            </value>
            <value>
                <fullName>Account Visibility</fullName>
            </value>
            <value>
                <fullName>Account Details Related</fullName>
            </value>
            <value>
                <fullName>Phone Number Change</fullName>
            </value>
            <value>
                <fullName>Order Products Related</fullName>
            </value>
            <value>
                <fullName>Order Amount Related</fullName>
            </value>
            <value>
                <fullName>Order Invoice Related</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vehicle Not Visible Under Store Account</fullName>
            </value>
            <value>
                <fullName>Vehicle Not Uploaded in Salesforce</fullName>
            </value>
            <value>
                <fullName>Vehicle Details Missing</fullName>
            </value>
            <value>
                <fullName>PDI Access Not Available</fullName>
            </value>
            <value>
                <fullName>PDI PDF Related Issue</fullName>
            </value>
            <value>
                <fullName>PDI Checklist Not Reflecting</fullName>
            </value>
            <value>
                <fullName>Job Card Not Opening</fullName>
                <label>Job Card Not Opening Or Closing</label>
            </value>
            <value>
                <fullName>Vehicle Not Found</fullName>
            </value>
            <value>
                <fullName>Parts/Labour Assignment Issue</fullName>
            </value>
            <value>
                <fullName>Parts/Labour Deletion Issue</fullName>
            </value>
            <value>
                <fullName>Invoice Related Issue</fullName>
            </value>
            <value>
                <fullName>Unable to Login</fullName>
            </value>
            <value>
                <fullName>Need New Credentials</fullName>
            </value>
            <value>
                <fullName>Need to Block Credentials</fullName>
            </value>
            <value>
                <fullName>Product Price Related Issue</fullName>
            </value>
            <value>
                <fullName>Inventory Not Found</fullName>
                <isActive>false</isActive>
                <label>Inventory Not Found</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>