force-app/main/default/objects/Salesforce_Support__c/fields/Team_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Team_Analysis__c</fullName>
    <label>Team Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring Issue</fullName>
            </value>
            <value>
                <fullName>Training Needed</fullName>
            </value>
            <value>
                <fullName>Post Deployment Issue</fullName>
            </value>
            <value>
                <fullName>Technical Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>