force-app/main/default/objects/Salesforce_Support__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_By_Name__c</columns>
    <columns>Internal_Team_Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,On Hold,In Progress,Closed</value>
    </filters>
    <label>All Salesforce Support</label>
</ListView>