force-app/main/default/objects/Salesforce_Support__c/listViews/Today_s_Cases.listView-meta.xml
<ListView>
    <fullName>Today_s_Cases</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Internal_Team_Remarks__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Cases</label>
</ListView>