force-app/main/default/objects/Salesforce_Support__c/listViews/Today_s_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Today_s_Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>Created_By_Name__c</columns>
    <columns>Internal_Team_Remarks__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Ticket_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Today&apos;s Open Cases</label>
</ListView>